# dalghaksub

./: .gitignore  README.md  dalghak sub.py  index.html  install_vps.sh  normal.txt  package-lock.json  package.json  pyproject.toml  sub.txt  telegram_monitor.session  telegram_monitor_vps.py
.github/workflows/: update.yml
app/: channel_manager.py  config.py  orchestrator.py  reaction_engine.py  session_manager.py
reading-app/: DESIGN.md  README.md  index.html  package.json  tailwind.config.cjs
reading-app/public/: gcode-viewer.html
reading-app/src/: App.tsx  main.tsx
reading-app/src/components/: LanguageToggle.tsx  ThemeToggle.tsx
reading-app/src/components/HighlightPanel/: HighlightPanel.tsx
reading-app/src/components/Reader/: ProgressFooter.tsx  Reader.tsx
reading-app/src/components/Settings/: SettingsModal.tsx
reading-app/src/components/SummaryView/: SummaryView.tsx
reading-app/src/hooks/: useDocumentLoader.ts  useHighlights.ts  useReadingProgress.ts
reading-app/src/i18n/: index.ts
reading-app/src/i18n/locales/en/: translation.json
reading-app/src/i18n/locales/fa/: translation.json
reading-app/src/store/: appStore.ts
reading-app/src/styles/: globals.css
reading-app/src/utils/: nanoid.ts
scripts/: bootstrap_session.py  fetch.js  get-last-message.js
splitted-by-protocol/: sub-trojan.txt  sub-vless.txt  sub-vmess.txt  trojan.txt  vless.txt  vmess.txt
tests/: test_config.py
ui/: main_window.py
